--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,21 @@
-<h1> Contact Us </h1>
-<p> Email: {{ info.email }} </p>
-<p> Phone: {{ info.phone }} </p>
-<p> Address: {{ info.address }} </p>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport">
+        <title> Contact </title>
+    </head>
+    <body>
+        <h2> Contact Us </h2>
+        <form id = "contactForm">
+            <label for = "name"> Name: </label> <br>
+            <input type = "text" id = "name" name = "name">
+
+            <label for = "email" > Email: </label> <br>
+            <input type = "email" id = "email" name="email"> 
+
+            <button type = "submit"> Submit </button>
+        </form>
+
+    </body>
+</html>
