--- a/contact.html
+++ b/contact.html
@@ -17,5 +17,9 @@
             <button type = "submit"> Submit </button>
         </form>
 
+        <footer style = "text-align:center;">
+            <p>Opening Hours: Mon-Fri: 11am-9pm, Sat-Sun: 10am-10p,m </p>
+        </footer>
+
     </body>
 </html>
