--- a/base.html
+++ b/base.html
@@ -1,3 +1,5 @@
-<nav>
-    <a herf="/">Home</a> | <a href="/about">About Us</a>
-</nav>
+{% block footer %}
+<footer style="background-color: #333; color: white; text-align: center; padding: 10px 0;">
+    <p>&copy; 2025 Nothing Before Milkshake. All Rights Reserved.</p>
+</footer>
+{% endblock %}
