--- a/home.html
+++ b/home.html
@@ -1,20 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Resturant Homepage</title>
-</head>
-<body>
-    <h1>Welcome to {{resturant.name}}</h1>
-    
-    {% if resturant.logo %}
-        <img src="{{resturant.logo.url}}" alt="{{ resturant.name }} Logo" width="200">
-    {% else %}
-        <p>No logo available</p>
-    {% endif %}
-
-    <p> Address: {{resturant.address}}</p>
-    <p>Phone:{{resturant.phone_number }}</p>
-
-</body>
-</html>
+<div style="font-size:18px; font-weight:bold; color:#333; margin-top:20px;">
+    Call Us:{{phone}}
+</div>
