--- a/base.html
+++ b/base.html
@@ -1,5 +1,1 @@
-{% block footer %}
-<footer style="background-color: #333; color: white; text-align: center; padding: 10px 0;">
-    <p>&copy; 2025 Nothing Before Milkshake. All Rights Reserved.</p>
-</footer>
-{% endblock %}
+<li><a href="{% url 'faq' %}"FAQ</a></li>
