--- a/home.html
+++ b/home.html
@@ -1,3 +1,4 @@
-<div style="font-size:18px; font-weight:bold; color:#333; margin-top:20px;">
-    Call Us:{{phone}}
+<div style="text-align: center; margin-top:20px;">
+    <h3>Current Date and Time</h3>
+    <p>{% now "l,d M Y H:i:s" %}</p>
 </div>
