--- a/contact.html
+++ b/contact.html
@@ -1,53 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
-<style>
-    body{
-        font-family: Arial,sans-serif;
-        background: #f4f4f9;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;    
-    }
-    .contact-box {
-        background: #fff;
-        padding: 25px;
-        border-radius: 10px;
-        box-shadow: 0 0 10px rgba(0,0,0,0.2);
-        width: 350px;
-    }
-    h2{ text-align:center; margin-bottom:20px;}
-    label{ display:block; margin:8px 0 4px;}
-    input{
-        width:100px;
-        padding:10px;
-        border:1px solid #ddd;
-        border-radius:6px;
-    }
-    button{
-        margin-top:15px;
-        width:100%;
-        padding:10px;
-        border:none;
-        background: #007bff;
-        color: #fff;
-        border-radius: 6px;
-        font-size: 16px;
-        cursor: pointer;
-    }
-    button:hover {background: #0056b3}
-</style>
+    <link rel="stylesheet" href="{% static 'css/contact.css'%}">
 </head>
 <body>
-    <div class="contact-box">
-        <h2> Contact Us</h2>
-        <form method="POST">
+    <div class="contact-container">
+        <h2>Contact Us</h2>
+        <p>We'd love to hear from you! Please fill out the form below:</p>
+
+        <from method="post">
             {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit">submit</button>
-        </form>
+            <div class="form-group">
+                <label for="name">Your Name</label>
+                <input type="text" id="name" name="name" placeholder="Enter your name">
+            </div>
+
+            <div class="form-group">
+                <label for="email">Your Email</label>
+                <input type="email" id="email" name="email" placeholder="Enter your email">
+            </div>
+
+            <div class="from-group">
+                <label for="message">Message</label>
+                <textarea id="message" name="message" rows="5" placeholder="Write your message"></textarea>
+            </div>
+
+            <button type="submit" class="btn">Send Message</button>
+        </from>
     </div>
 </body>
 </html>
