--- a/contact.html
+++ b/contact.html
@@ -1,35 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
-    <link rel="stylesheet" href="{% static 'css/contact.css'%}">
 </head>
 <body>
-    <div class="contact-container">
-        <h2>Contact Us</h2>
-        <p>We'd love to hear from you! Please fill out the form below:</p>
+    <h2> Contact Us</h2>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
 
-        <from method="post">
-            {% csrf_token %}
-            <div class="form-group">
-                <label for="name">Your Name</label>
-                <input type="text" id="name" name="name" placeholder="Enter your name">
-            </div>
+        <button type="submit">send</button>
+    </form>
 
-            <div class="form-group">
-                <label for="email">Your Email</label>
-                <input type="email" id="email" name="email" placeholder="Enter your email">
-            </div>
-
-            <div class="from-group">
-                <label for="message">Message</label>
-                <textarea id="message" name="message" rows="5" placeholder="Write your message"></textarea>
-            </div>
-
-            <button type="submit" class="btn">Send Message</button>
-        </from>
+    {% if form.errors %}
+    <div style="color: red;">
+        <p>Please correct the following errors:</p>
+        <ul>
+            {% for field in form %}
+                {% for error in field.error %}
+                    <li>{{field.label}} : {{error }}</li>
+                {% endfor %}
+            {% endfor %}
+        </ul>
     </div>
+    {% endif %}
 </body>
 </html>
