--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Contact Us</title>
+    <title>Contact Us</title>    
+  <style>
+    .address-box {
+      margin-top: 20px;
+      padding: 15px;
+      border-left: 4px solid #4CAF50;
+      background: #f9f9f9;
+      font-family: Arial, sans-serif;
+    }
+  </style>
+
 </head>
 <body>
     <h2> Contact Us</h2>
@@ -26,3 +36,16 @@
     {% endif %}
 </body>
 </html>
+
+
+  <style>
+    .address-box {
+      margin-top: 20px;
+      padding: 15px;
+      border-left: 4px solid #4CAF50;
+      background: #f9f9f9;
+      font-family: Arial, sans-serif;
+    }
+  </style>
+
+
