--- a/home.html
+++ b/home.html
@@ -1,24 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Restaurant Homepage</title>
-    <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-</head>
-<body class="p-4">
-    <h1>Welcome to Our Restaurant</h1>
-
-    <selection class="mt-4">
-        <h2>Opening Hours</h2>
-        <ul class="list-group">
-            {% for day, hours in opening_hours.items %}
-                <li class="list-group-item d-flex justify-content-between">
-                    <strong>{{day}}</strong>
-                    <span>{{hours}}</span>
-                </li>
-            {% endfor %}
-        </ul>
-    </selection>
-</body>
-</html>
+<nav>
+    <ul>
+        <li><a href="{% url 'home'%}">Home</a></li>
+        <li><a href="{% url 'reservations' %}">Reservations</a></li>
+    </ul>
+</nav>
